datasaude-app-arm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: datasaude-app
  name: datasaude-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: datasaude-app
  template:
    metadata:
      labels:
        app: datasaude-app
    spec:
      containers:
        - image: cbeloni/datasaude-app:arm64
          name: datasaude-app
          ports:
            - containerPort: 3000
