datasaude-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: datasaude-app
  name: datasaude-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datasaude-app
  template:
    metadata:
      labels:
        app: datasaude-app
    spec:
      containers:
        - image: cbeloni/datasaude-app:latest
          name: datasaude-app
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: datasaude-app-svc
spec:
  type: ClusterIP
  selector:
    app: datasaude-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datasaude-app-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: datasaude-app.192.168.0.201.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datasaude-app-svc
                port:
                  number: 80
    - host: datasaude-app-staging.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datasaude-app-svc
                port:
                  number: 80
